# django-bs-carousel

./: MANIFEST.in  README.md  setup.cfg  setup.py
django-bs-carousel/: apps.py  urls.py
django-bs-carousel/django_bs_carousel.egg-info/: PKG-INFO  SOURCES.txt
django-bs-carousel/static/django-bs-carousel/js/: carousel.js
django-bs-carousel/templates/django-bs-carousel/: carousel.html
django_bs_carousel/: .gitignore
django_bs_carousel.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
django_bs_carousel/templates/django-bs-carousel/: carousel.html
django_bs_carousel/templates/django_bs_carousel/: carousel.html
