[metadata]
name = django_bs_carousel
version = 1.0
data_files=[('templates', ['templates/django_bs_carousel/carousel.html']),
                  ('static', ['static/django_bs_carousel/js/carousel.js', 'static/django_bs_carousel/images/spinning-circles.svg', 'static/django_bs_carousel/css/styles.css'])],
description = A Django app to add a bootstrap carousel with asynchronous loading of images.
long_description = file: README.md
long_description_content_type='text/markdown'
url = https://github.com/millerthegorilla/django_bs_carousel
author = James Miller
author_email = jamesstewartmiller@gmail.com
license = MiT  # Example license
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: X.Y  # Replace "X.Y" as appropriate
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 3.2  # Replace "X.Y" as appropriate